Fix titles align im PlatformAddressTotalCard

--- a/packages/frontend/src/components/platformAddresses/PlatformAddressTotalCard.scss
+++ b/packages/frontend/src/components/platformAddresses/PlatformAddressTotalCard.scss
@@ -40,6 +40,8 @@
   }
 
   &__InfoLine {
+    align-items: flex-start !important;
+
     &--Address {
       .InfoLine__Value {
         container-type: inline-size;
